--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <button class="rps">Rock</button>
+        <button class="rps">Paper</button>
+        <button class="rps">Scissors</button>
+        <div id="player"></div>
+        <div id="computer"></div>
+        <div id="result"></div>
+        <div id="currentPlayerScore"></div>
+        <div id="currentComputerScore"></div>
+        <div id="winner"></div>
+    </div>
 </body>
 </html>
