--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <button class="rps">Rock</button>
-        <button class="rps">Paper</button>
-        <button class="rps">Scissors</button>
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
         <div id="player"></div>
         <div id="computer"></div>
         <div id="result"></div>
