--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 </head>
 <body>
     <div class="container">
+        <div class="buttons">
         <button>Rock</button>
         <button>Paper</button>
         <button>Scissors</button>
+        </div>
+            <div class="break"></div>
         <div id="player"></div>
         <div id="computer"></div>
+            <div class="break"></div>
         <div id="result"></div>
+            <div class="break"></div>
         <div id="currentPlayerScore"></div>
         <div id="currentComputerScore"></div>
+            <div class="break"></div>
         <div id="winner"></div>
     </div>
 </body>
